--- a/TaskList.WebApp/src/components/workItems/WorkItemDialog.scss
+++ b/TaskList.WebApp/src/components/workItems/WorkItemDialog.scss
@@ -1,8 +1,4 @@
-.add-work-item {
-  display: inline-block;
-}
-
-.add-work-item__dialog {
+.work-item-dialog {
   &__add-button {
     width: 75px;
   }
