--- a/TaskList.WebApp/src/pages/LoginPage.scss
+++ b/TaskList.WebApp/src/pages/LoginPage.scss
@@ -1,4 +1,8 @@
 .login-page {
+  &__error {
+    color: red;
+    margin-bottom: var(--spacing-half);
+  }
   &__label {
     display: inline-block;
     width: 100px;
